# lpkit

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/enclosure/: LP_box.stl  lp-box-lid.stl
assets/enclosure/inventor_files/: Amphenol RF 31-203-RFX v1.ipt  Fuse Holder v1.ipt  Fuse Holder.iam  JST_B2B_XH_A.ipt  JST_XH_B2B-XH-A_1x02_P2.50mm_Vertical.iam  M3-nut.ipt  M3x8-BHCS.ipt  M3x8-SHCS.ipt  R_0603_1608Metric.iam  R_0603_1608Metric.ipt  R_1206_3216Metric.iam  R_1206_3216Metric.ipt  R_Axial_DIN0617_L17.0mm_D6.0mm_P20.32mm_Horizontal.iam  R_Axial_DIN0617_L170mm_D60mm_P2032mm_Horizontal.ipt  bnc-nut-holder.iam  bnc-nut-support.ipt  brass-insert-m3x5.ipt  firstki.iam  firstki_PCB.ipt  lp-box-lid.ipt  lp-box.iam  lp-box.ipj  lp-box.ipj.old  lp-box.ipt
assets/pcb/: Fuse Holder.SLDPRT  Fuse Holder.step  LP-measurment_v15.sch  ak.kicad_sym  fp-info-cache  langmuir_probe_pcb.kicad_pcb  langmuir_probe_pcb.kicad_prl  langmuir_probe_pcb.kicad_pro  langmuir_probe_pcb.kicad_sch  langmuir_probe_pcb.step
assets/pcb/ak.pretty/: BLX-A Fuse Holder.kicad_mod
examples/: read_sl100.ipynb  wdf_decription.ipynb
src/lpkit/: langmuir.py  read_sl1000.py  wdfreader.py
